--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Anasayfa</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Wep site</h1>
+  </body>
 </html>
